[tool.poetry]
name = "genai-chat"
version = "0.1.0"
description = "A sample chat application using streamlit"
authors = ["Biju Kunjummen <biju.kunjummen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.11.0"
langchain = "^0.1.5"
streamlit = "^1.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
